# clipping-parser

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  profile.sh  test_clippings.txt  test_single_quote.txt
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
src/: Parser.rs  main.rs
test_data/: test_clippings.txt
