[package]
name = "clipping-parser"
version = "0.1.0"
edition = "2018"
authors = ["Banu Calin <banucaliniulian@gmail.com>"]
description = "Parses amazon kindle clippings file."
license-file = "./LICENCE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
